update reduce file size 30 Apr 2021

--- a/DESKTOP_SETUP_I3WM/FILES_INC/i3status.conf
+++ b/DESKTOP_SETUP_I3WM/FILES_INC/i3status.conf
@@ -30,7 +30,7 @@ order += "memory"
 order += "tztime local"
 
 cpu_usage {
-        format = "💪 %usage "
+        format = "🚀 %usage "
 }
 
 load {
@@ -44,23 +44,23 @@ disk "/" {
 }
 
 wireless _first_ {
-        format_up = "📶 (%essid %quality) %ip "
+        format_up = "📡 (%essid %quality) %ip "
         format_down = "💔 "
 }
 
 ethernet _first_ {
 # if you use %speed, i3status requires root privileges
         format_up = "🌏 %ip %speed "
-        format_down = "🌐"
+        format_down = "🕵 "
 }
 
 battery all {
         # format = "%status %percentage %remaining %emptytime"
         format = " %status %percentage"
-        format_down = "❗🔋"
+        format_down = "👀"
         last_full_capacity = true
         integer_battery_capacity = true
-        # status_chr = ""
+        # status_chr = " "
         status_chr = "⚡"
         # status_bat = "bat"
         # status_bat = "☉"
@@ -83,5 +83,5 @@ memory {
 tztime local {
         # format = "%Y-%m-%d %H:%M:%S"
         #format = " %d.%m. %H:%M "
-        format = " %a %-d %b %G  %l:%M %P "
+        format = " %a %-d %b %G|%l:%M %P "
 }
