--- a/LAPTOP_SETUP_I3WM/FILES_INC/i3status.conf
+++ b/LAPTOP_SETUP_I3WM/FILES_INC/i3status.conf
@@ -79,5 +79,5 @@ memory {
 
 tztime local {
         # format = "%Y-%m-%d %H:%M:%S"
-        format = " |%a%-d %b %G %l:%M%P |"
+        format = " %a%-d %b %G %l:%M%P "
 }
