--- a/DESKTOP_SETUP_I3WM/FILES_INC/i3status.conf
+++ b/DESKTOP_SETUP_I3WM/FILES_INC/i3status.conf
@@ -21,8 +21,8 @@ order += "disk /"
 #
 order += "wireless _first_"
 
-order += "ethernet _first_"
-order += "battery all"
+#order += "ethernet _first_"
+#order += "battery all"
 #   this is use in desktop computer I do not want to show
 #   battery here
 # order += "load"
@@ -30,7 +30,7 @@ order += "memory"
 order += "tztime local"
 
 cpu_usage {
-        format = "🚀 %usage "
+        format = " cpu  %usage "
 }
 
 load {
@@ -44,28 +44,27 @@ disk "/" {
 }
 
 wireless _first_ {
-        format_up = "📡 (%essid %quality) %ip "
-        format_down = "💔 "
+        format_up = " %essid %quality "
+        format_down = "Disconnected"
 }
 
 ethernet _first_ {
 # if you use %speed, i3status requires root privileges
-        format_up = "🌏 %ip %speed "
-        format_down = "🕵 "
+        format_up = " lan: %ip %speed "
+        format_down = " no lan "
 }
 
 battery all {
         # format = "%status %percentage %remaining %emptytime"
         format = " %status %percentage"
-        format_down = "👀"
+        format_down = "No battery"
         last_full_capacity = true
         integer_battery_capacity = true
-        # status_chr = " "
+        # status_chr = ""
         status_chr = "⚡"
         # status_bat = "bat"
         # status_bat = "☉"
-        #status_bat = "  "
-        status_bat = "🔋"
+        status_bat = ""
         # status_unk = "?"
         status_unk = ""
         # status_full = ""
@@ -83,5 +82,5 @@ memory {
 tztime local {
         # format = "%Y-%m-%d %H:%M:%S"
         #format = " %d.%m. %H:%M "
-        format = " %a %-d %b %G|%l:%M %P "
+        format = " %a %-d %b %G  %l:%M %P "
 }
