update for manjaro easy setup 28 May 2021

--- a/DESKTOP_SETUP_I3WM/FILES_INC/config
+++ b/DESKTOP_SETUP_I3WM/FILES_INC/config
@@ -375,8 +375,7 @@ bar {
 	strip_workspace_numbers yes
 
     colors {
-        #background #222D31  #
-        background $term_background
+        background #222D31  
         statusline #F9FAF9
         separator  #454947
 
