--- a/DESKTOP_SETUP_I3WM/FILES_INC/i3status.conf
+++ b/DESKTOP_SETUP_I3WM/FILES_INC/i3status.conf
@@ -7,12 +7,15 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
+
         colors = true
         interval = 60
         color_good = "#2AA198"
         color_bad = "#586E75"
         color_degraded = "#DC322F"
 }
+
+
 
 # order += "ipv6"
 order += "cpu_usage"
@@ -21,56 +24,66 @@ order += "disk /"
 #
 order += "wireless _first_"
 
-#order += "ethernet _first_"
+order += "ethernet _first_"
+
+# in the laptop uncomment to show battery
 #order += "battery all"
-#   this is use in desktop computer I do not want to show
-#   battery here
-# order += "load"
+order += "load"
 order += "memory"
 order += "tztime local"
 
+
+
+
+
 cpu_usage {
-        format = " cpu  %usage "
+    format = "🏋 %usage"
 }
 
-load {
-        format = "[ load: %1min ,%5min,%15min]"
-        # max_threshold = 0.3
-}
-
-disk "/" {
-        # format = " hdd %avail "
-        format = " ⛁ %avail "
-}
 
 wireless _first_ {
-        format_up = " %essid %quality "
-        format_down = "Disconnected"
+        #format_up = "W: (%quality at %essid) %ip"
+        #format_down = "W: down"
+        format_up = "📶(%essid %quality) %ip "
+        format_down = "💔 "
+
 }
 
 ethernet _first_ {
-# if you use %speed, i3status requires root privileges
-        format_up = " lan: %ip %speed "
-        format_down = " no lan "
+        #format_up = "E: %ip (%speed)"
+        #format_down = "E: down"
+        format_up = "🌏 %ip %speed "
+        format_down = "🐸"
 }
 
 battery all {
-        # format = "%status %percentage %remaining %emptytime"
+        #format = "%status %percentage %remaining"
         format = " %status %percentage"
-        format_down = "No battery"
+        format_down = "🕵"
         last_full_capacity = true
         integer_battery_capacity = true
         # status_chr = ""
         status_chr = "⚡"
         # status_bat = "bat"
         # status_bat = "☉"
-        status_bat = ""
+        #status_bat = ""
+        status_bat = "🔋"
         # status_unk = "?"
         status_unk = ""
         # status_full = ""
         status_full = "☻"
         low_threshold = 15
         threshold_type = time
+}
+
+disk "/" {
+        #format = "%avail"
+        format = " ⛁ %avail "
+}
+
+load {
+        #format = "%1min"
+        format = "[🏇 %1min ,%15min]"
 }
 
 memory {
@@ -80,7 +93,6 @@ memory {
 }
 
 tztime local {
-        # format = "%Y-%m-%d %H:%M:%S"
-        #format = " %d.%m. %H:%M "
+        #format = "%Y-%m-%d %l:%M %P"
         format = " %a %-d %b %G  %l:%M %P "
 }
