update for laptop status 5 June 2021

--- a/LAPTOP_SETUP_I3WM/FILES_INC/i3status.conf
+++ b/LAPTOP_SETUP_I3WM/FILES_INC/i3status.conf
@@ -41,13 +41,13 @@ disk "/" {
 
 
 wireless _first_ {
-        format_up = "📶 (%essid %quality) %ip "
+        format_up = "📶 (%essid %quality) "
         format_down = "💔 "
 }
 
 ethernet _first_ {
 # if you use %speed, i3status requires root privileges
-        format_up = "🌏 %ip %speed "
+        format_up = "🌏 %speed "
         format_down = " 🕵 "
 }
 
@@ -72,7 +72,7 @@ battery all {
 }
 
 memory {
-        format = "%used | %available"
+        format = "%used|%available"
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
