--- a/DESKTOP_SETUP_I3WM/FILES_INC/config
+++ b/DESKTOP_SETUP_I3WM/FILES_INC/config
@@ -87,10 +87,15 @@ bindsym $mod+Shift+d exec i3-dmenu-desktop --dmenu="dmenu -i -fn 'Noto Sans:size
 #bindsym $mod+Shift+Print --release exec --no-startup-id i3-scrot -s
 
 
+# =============================================================================
 # screen capture
-bindsym Print exec flameshot gui
-bindsym $mod+Print exec flameshot launcher
+#bindsym Print exec flameshot gui
+#bindsym $mod+Print exec flameshot launcher
+# flameshot has been remove 13 Jul 2021
 
+bindsym Print exec spectacle
+
+# =============================================================================
 
 
 bindsym $mod+Shift+h exec xdg-open /usr/share/doc/manjaro/i3_help.pdf
